--- a/week4_class_demo.ipynb
+++ b/week4_class_demo.ipynb
@@ -48,7 +48,7 @@
         "from sklearn.metrics import roc_curve\n",
         "from matplotlib import pyplot"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -62,7 +62,7 @@
         "\tn_clusters_per_class=1, weights=[0.99], flip_y=0, random_state=4)\n",
         "df = pd.DataFrame(X)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -74,14 +74,14 @@
         "df.columns = ['feature' + str(i) for i in df.columns]\n",
         "df['actual_y'] = y"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "VGyk24bfz1J3",
-        "outputId": "d577b773-e0ef-4985-f70d-8dd6050d7e0e",
+        "outputId": "e21ea83b-72a5-483c-a780-b83f6c5e5b13",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
@@ -90,7 +90,7 @@
       "source": [
         "df"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -113,7 +113,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f604c44e-4e51-4eff-b298-324d55e16267\">\n",
+              "  <div id=\"df-dc356813-4fbf-4e94-8ddf-78528cc58cfb\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -209,7 +209,7 @@
               "</table>\n",
               "<p>10000 rows × 3 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f604c44e-4e51-4eff-b298-324d55e16267')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dc356813-4fbf-4e94-8ddf-78528cc58cfb')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -260,12 +260,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-f604c44e-4e51-4eff-b298-324d55e16267 button.colab-df-convert');\n",
+              "          document.querySelector('#df-dc356813-4fbf-4e94-8ddf-78528cc58cfb button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f604c44e-4e51-4eff-b298-324d55e16267');\n",
+              "          const element = document.querySelector('#df-dc356813-4fbf-4e94-8ddf-78528cc58cfb');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -288,7 +288,58 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# train test split\n",
+        "trainX, testX, trainy, testy = train_test_split(X, y, test_size=0.5, random_state=2, stratify=y)\n",
+        "\n",
+        "# fit a model on training set\n",
+        "model = LogisticRegression()\n",
+        "model.fit(trainX, trainy)\n",
+        "\n",
+        "# predict probabilities\n",
+        "y_pred = model.predict_proba(testX)"
+      ],
+      "metadata": {
+        "id": "oSKvm0CZgE-k"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_pred"
+      ],
+      "metadata": {
+        "id": "thQ9u6mRgP3Q",
+        "outputId": "c2f436d3-fb60-457f-abcc-82856bda8226",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[9.92758703e-01, 7.24129721e-03],\n",
+              "       [9.96495510e-01, 3.50448974e-03],\n",
+              "       [9.99867566e-01, 1.32433775e-04],\n",
+              "       ...,\n",
+              "       [9.98780592e-01, 1.21940764e-03],\n",
+              "       [9.99705540e-01, 2.94459735e-04],\n",
+              "       [9.99603387e-01, 3.96613003e-04]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
         }
       ]
     },
@@ -303,16 +354,6 @@
         }
       },
       "source": [
-        "# train test split\n",
-        "trainX, testX, trainy, testy = train_test_split(X, y, test_size=0.5, random_state=2, stratify=y)\n",
-        "\n",
-        "# fit a model on training set\n",
-        "model = LogisticRegression()\n",
-        "model.fit(trainX, trainy)\n",
-        "\n",
-        "# predict probabilities\n",
-        "y_pred = model.predict_proba(testX)\n",
-        "\n",
         "# keep probabilities for the positive outcome (class 1) only\n",
         "# classes are ordered so class 1 is at col index 1\n",
         "y_pred = y_pred[:, 1]\n",
