--- a/week4_assignment_part1.ipynb
+++ b/week4_assignment_part1.ipynb
@@ -17,7 +17,7 @@
         "id": "82ba5cb0-b81e-43ea-acfa-e661fff2572c"
       },
       "source": [
-        "# CS 5262-51 Week 4 [ZHANG] Assignment Part 1\n",
+        "# CS 5262-51 Week 4 Assignment Part 1\n",
         "\n",
         "## Instructions of Part 1 of this assignment:\n",
         "- Run all the cells in this notebook and observe the outputs as a refresher of the problem to be solved here and the process of producing a first few ML models. \n",
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "5d51761d-af0e-411f-9375-54bcd91a62db",
       "metadata": {
         "id": "5d51761d-af0e-411f-9375-54bcd91a62db"
@@ -91,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "6b347d70-2e7b-4cdc-a290-ace614045711",
       "metadata": {
         "colab": {
@@ -321,7 +321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "107620e0-89ee-4f53-ac2e-dd0d03b15b66",
       "metadata": {
         "colab": {
@@ -368,7 +368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "ae42a8db-457d-4532-934b-b4be3e6ce33b",
       "metadata": {
         "colab": {
@@ -396,7 +396,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "02c5bb25-8c26-47b0-b53c-f352babdb717",
       "metadata": {
         "id": "02c5bb25-8c26-47b0-b53c-f352babdb717"
@@ -422,7 +422,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "2c32bbd1-5392-4281-a1a4-a38ed6dd6390",
       "metadata": {
         "colab": {
@@ -831,7 +831,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "113d1ab3-739a-4e42-8500-92b6332b2475",
       "metadata": {
         "colab": {
@@ -914,7 +914,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "9ed44830-4039-4564-bde0-2b6661d672c5",
       "metadata": {
         "id": "9ed44830-4039-4564-bde0-2b6661d672c5"
@@ -930,7 +930,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "242c958a-894d-4259-9dfd-387ddf541144",
       "metadata": {
         "id": "242c958a-894d-4259-9dfd-387ddf541144"
@@ -945,7 +945,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "917a7dae-35ff-43b2-8186-dbe731d0f08d",
       "metadata": {
         "colab": {
@@ -1053,7 +1053,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "f94e90d0-7785-48f4-a0cd-ff37090a92d9",
       "metadata": {
         "id": "f94e90d0-7785-48f4-a0cd-ff37090a92d9"
@@ -1067,7 +1067,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "4b612b9e-e561-47c9-9ecb-8ea5ec62cda9",
       "metadata": {
         "colab": {
@@ -1095,7 +1095,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "e8f2cb02-c5eb-4fd4-9331-050191081014",
       "metadata": {
         "colab": {
@@ -1143,7 +1143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "69f4874e-0de3-462f-95ef-d01ba648f7a4",
       "metadata": {
         "colab": {
@@ -1178,7 +1178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "f9529343-553b-417d-9347-fec243edd4d2",
       "metadata": {
         "colab": {
@@ -1807,7 +1807,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "9a0c404f-514c-4f2c-98c9-506ca8ca1c46",
       "metadata": {
         "colab": {
@@ -1863,7 +1863,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "45f8b024-9842-41e3-bbbb-2642cd4af47a",
       "metadata": {
         "colab": {
@@ -1890,7 +1890,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "e1832990-1f9d-46ee-9cf1-3c1288f7c47a",
       "metadata": {
         "colab": {
@@ -1920,7 +1920,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "7ebdc166-bdb7-4863-b46f-165f1aec7a7d",
       "metadata": {
         "colab": {
@@ -1984,7 +1984,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "19f6f347-e01c-496a-ac3a-7e603361997f",
       "metadata": {
         "tags": [],
@@ -2017,7 +2017,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "594638a2-fe7e-4295-ac53-edca4db92565",
       "metadata": {
         "colab": {
@@ -2064,7 +2064,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "05e5894f-4f8c-4f42-9b3d-63621cf18f4c",
       "metadata": {
         "id": "05e5894f-4f8c-4f42-9b3d-63621cf18f4c"
@@ -2099,7 +2099,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "c9101ce8-4fbb-4058-b147-67919ff46f6d",
       "metadata": {
         "colab": {
@@ -2199,7 +2199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "id": "370c38c4-a091-43f4-a095-509c8b2b4f9a",
       "metadata": {
         "id": "370c38c4-a091-43f4-a095-509c8b2b4f9a"
@@ -2217,7 +2217,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "id": "be1cecb5-0aa8-42a7-96d3-1be721acc4d5",
       "metadata": {
         "colab": {
@@ -2244,7 +2244,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "id": "bac7bee7-2136-4bcd-b57d-cc4e1f1e39bf",
       "metadata": {
         "colab": {
@@ -2289,7 +2289,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "id": "fe4a4c7f-3806-4e8d-a642-34ddd0488755",
       "metadata": {
         "colab": {
@@ -2324,7 +2324,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "id": "44b01658-ec11-45fa-aaf7-9df5dc3d398e",
       "metadata": {
         "colab": {
@@ -2772,7 +2772,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": null,
       "id": "c13ddef8-9fe5-48c3-892b-514cae0ff0cb",
       "metadata": {
         "colab": {
@@ -2813,7 +2813,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": null,
       "id": "686c502f-7bd9-4bb6-8477-b055767db77d",
       "metadata": {
         "colab": {
@@ -2840,7 +2840,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": null,
       "id": "91d03e13-ce53-4396-953b-93b6ee991634",
       "metadata": {
         "colab": {
@@ -2870,7 +2870,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "id": "f467cf24-1f0a-4967-8552-929843bfa5d3",
       "metadata": {
         "colab": {
@@ -2937,7 +2937,7 @@
         }
       },
       "id": "OVSmZSPVS4Wa",
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3167,7 +3167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": null,
       "id": "c8492e28-8801-49ac-90d8-d23aa654d98b",
       "metadata": {
         "colab": {
@@ -3199,7 +3199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "id": "9465fbec-8727-41f0-a242-ca804a752948",
       "metadata": {
         "colab": {
@@ -3300,7 +3300,7 @@
         "outputId": "9482c7ff-5f4d-4b4b-8371-567679182f13"
       },
       "id": "otATE9WHhrWF",
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3487,7 +3487,7 @@
         "outputId": "a8e3b050-4a51-4333-b730-39e628cb6e97"
       },
       "id": "TJ3NRRdNiuRS",
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3560,7 +3560,7 @@
         "outputId": "699845c6-c048-4e82-d2c0-342352ab8c4c"
       },
       "id": "KIh8sICk_pz2",
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3618,19 +3618,7 @@
         "id": "0-LdKOUIAz6d"
       },
       "id": "0-LdKOUIAz6d",
-      "execution_count": 129,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "grid_search.best_estimator_.predict?"
-      ],
-      "metadata": {
-        "id": "ki8c5X8vVI-r"
-      },
-      "id": "ki8c5X8vVI-r",
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": []
     },
     {
