--- a/Week_8_Homework_Gradient_Descent.ipynb
+++ b/Week_8_Homework_Gradient_Descent.ipynb
@@ -6,7 +6,7 @@
       "name": "Week_8_Homework_Gradient_Descent.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOK5+RklCQAXgovha5WJ+Zu",
+      "authorship_tag": "ABX9TyPTLAPEIMA4zLymFruqTiaR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,9 @@
       },
       "outputs": [],
       "source": [
-        "# https://www.cs.toronto.edu/~frossard/post/linear_regression/\n"
+        "Ref:\n",
+        "# https://www.cs.toronto.edu/~frossard/post/linear_regression/\n",
+        "# https://medium.com/analytics-vidhya/gradient-descent-optimization-techniques-4316419c5b74\n"
       ]
     },
     {
